# awesome-stars

./: README.md  pyproject.toml  starred.py
.github/workflows/: random-awesome-stars.yml  schedules.yml  update-awesome-stars.yml
